[gd_scene load_steps=5 format=3 uid="uid://bpwnrfmt3m86n"]

[ext_resource type="Script" uid="uid://h6pmx8utowar" path="res://scripts/ball.gd" id="1_yqm22"]
[ext_resource type="AudioStream" uid="uid://cu4uxh6x0i0a2" path="res://assets/low.wav" id="2_41u45"]
[ext_resource type="AudioStream" uid="uid://dl06ssb77l22c" path="res://assets/high.wav" id="3_ktgx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7tl7"]

[node name="Ball" type="CharacterBody2D"]
physics_interpolation_mode = 1
safe_margin = 0.01
script = ExtResource("1_yqm22")

[node name="BallSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g7tl7")
one_way_collision = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="LowBounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_41u45")

[node name="HighBounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ktgx5")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
